--- a/index.html
+++ b/index.html
@@ -1,75 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>DEMO</title>
+    <link rel="stylesheet" href="css/styles2.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+      <h1>I'm Pankaj</h1>
+      <h2>a <span class="pro">pro</span>grammer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+      <img src="images/mountain.png" alt="mountain-image">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profile-img" src="images/man.png" alt="">
+        <h2>Hello.</h2>
+        <p class="profile-desc">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-img1" src="images/chart.png" alt="">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="skill-img2" src="images/skills.png" alt="">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p class="contact-desc">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">Contact Me</a>
+      </div>
+    </div>
 
-<head>
-  <meta charset="utf-8">
-  <title>Pankaj's Page</title>
-</head>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="pankaj.png" alt="Pankaj Sehgal Image"></td>
-      <td>  <h1>Pankaj Sehgal</h1>
-        <p><em>HTML learner to lean <strong><a href="https://novuse.com">Web Development</a></strong>.</em></p>
-        <p>I am now a web developer, I love coffee.</p></td>
-    </tr>
-  </table>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2020 Pankaj Sehgal.</p>
+    </div>
 
-
-  <hr>
-  <h3>Books and Teaching</h3>
-  <ul>
-    <li>The complete WEbDev book</li>
-    <li>The Complete CSS book</li>
-  </ul>
-  <hr>
-  <h3>work Exp</h3>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-      <tr>
-        <td>2010 - 2013</td>
-        <td>Lead developer</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2013</td>
-        <td>Sr Lead developer</td>
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-  </table>
-  <hr>
-  <h3>My Skills</h3>
-  <table cellspacing='10'>
-    <tr>
-      <td>HTML</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>JS</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Node</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-  </table>
-  <hr>
-  <a href="hobbies.html">Hobbies</a>
-  <a href="contactme.html">My Contact</a>
-<hr>
-</body>
-
+  </body>
 </html>
