--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p class="copyright">© 2020 Pankaj Sehgal.</p>
+      <p class="copyright">© 2020 Pankaj.</p>
     </div>
 
   </body>
